[tool.poetry]
name = "trading-system-py"
version = "0.1.0"
description = "TradingSystemPy is a Python-based trading system framework designed for building, testing, and deploying algorithmic trading strategies. It provides tools for data ingestion, strategy development, backtesting, risk management, and live trading integration, making it a comprehensive solution for traders and developers alike."
authors = ["acimarell <you@example.com>, sikiro-dev <plane.fauna3432@eagereverest.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2.1.0"
matplotlib = "3.10.0"
yfinance = "0.2.50"
ta-lib = "0.5.1"
plotly = "5.24.1"
tensorflow = "^2.18.0"
scikit-learn = "^1.6.0"
nbformat = "^5.10.4"
ipykernel = "^6.29.5"
nbstripout = "^0.8.1"
arch = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
